Improve SEO with comprehensive meta tags and JSON-LD schema
- Shorten description to 153 chars (was 203)
- Add canonical URL
- Add search discovery metas (subject, classification, coverage)
- Expand keywords with all tracked features
- Add og:image dimensions and locale
- Fix Twitter tags (name vs property) and add creator/site
- Add JSON-LD WebApplication structured data with featureList
- Reference new og-image.png (1200x630) for social sharing

--- a/index.html
+++ b/index.html
@@ -7,26 +7,79 @@
     <!-- Primary Meta Tags -->
     <title>World Monitor - Real-Time Global Intelligence Dashboard</title>
     <meta name="title" content="World Monitor - Real-Time Global Intelligence Dashboard" />
-    <meta name="description" content="Real-time global intelligence dashboard aggregating news, markets, geopolitical data, military bases, infrastructure monitoring, and live events into a unified situation awareness interface." />
-    <meta name="keywords" content="global intelligence, geopolitical dashboard, world news, market data, military bases, nuclear facilities, undersea cables, conflict zones, real-time monitoring, situation awareness, OSINT" />
+    <meta name="description" content="Real-time global intelligence dashboard with live news, markets, military tracking, infrastructure monitoring, and geopolitical data. OSINT in one view." />
+    <meta name="keywords" content="global intelligence, geopolitical dashboard, world news, market data, military bases, nuclear facilities, undersea cables, conflict zones, real-time monitoring, situation awareness, OSINT, flight tracking, AIS ships, earthquake monitor, protest tracker, power outages, oil prices, government spending, polymarket predictions" />
     <meta name="author" content="Elie Habib" />
     <meta name="theme-color" content="#0a0f0a" />
     <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://worldmonitor.app/" />
+
+    <!-- Additional Search Discovery -->
+    <meta name="application-name" content="World Monitor" />
+    <meta name="subject" content="Global Intelligence and Situation Awareness" />
+    <meta name="classification" content="Intelligence Dashboard, OSINT Tool, News Aggregator" />
+    <meta name="coverage" content="Worldwide" />
+    <meta name="distribution" content="Global" />
+    <meta name="rating" content="General" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://worldmonitor.app/" />
     <meta property="og:title" content="World Monitor - Real-Time Global Intelligence Dashboard" />
-    <meta property="og:description" content="Real-time global intelligence dashboard aggregating news, markets, geopolitical data, and infrastructure monitoring into a unified situation awareness interface." />
-    <meta property="og:image" content="https://worldmonitor.app/favico/worldmonitor-icon-1024.png" />
+    <meta property="og:description" content="Real-time global intelligence dashboard with live news, markets, military tracking, infrastructure monitoring, and geopolitical data." />
+    <meta property="og:image" content="https://worldmonitor.app/favico/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="World Monitor" />
+    <meta property="og:locale" content="en_US" />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://worldmonitor.app/" />
-    <meta property="twitter:title" content="World Monitor - Real-Time Global Intelligence Dashboard" />
-    <meta property="twitter:description" content="Real-time global intelligence dashboard aggregating news, markets, geopolitical data, and infrastructure monitoring into a unified situation awareness interface." />
-    <meta property="twitter:image" content="https://worldmonitor.app/favico/worldmonitor-icon-1024.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://worldmonitor.app/" />
+    <meta name="twitter:title" content="World Monitor - Real-Time Global Intelligence Dashboard" />
+    <meta name="twitter:description" content="Real-time global intelligence dashboard with live news, markets, military tracking, infrastructure monitoring, and geopolitical data." />
+    <meta name="twitter:image" content="https://worldmonitor.app/favico/og-image.png" />
+    <meta name="twitter:site" content="@worldmonitorapp" />
+    <meta name="twitter:creator" content="@eliehabib" />
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "World Monitor",
+      "alternateName": "WorldMonitor",
+      "url": "https://worldmonitor.app/",
+      "description": "Real-time global intelligence dashboard with live news, markets, military tracking, infrastructure monitoring, and geopolitical data.",
+      "applicationCategory": "UtilitiesApplication",
+      "operatingSystem": "Web Browser",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "author": {
+        "@type": "Person",
+        "name": "Elie Habib"
+      },
+      "featureList": [
+        "Real-time news aggregation",
+        "Stock market tracking",
+        "Military flight monitoring",
+        "Ship AIS tracking",
+        "Earthquake alerts",
+        "Protest tracking",
+        "Power outage monitoring",
+        "Oil price analytics",
+        "Government spending data",
+        "Prediction markets",
+        "Infrastructure monitoring",
+        "Geopolitical intelligence"
+      ],
+      "screenshot": "https://worldmonitor.app/favico/og-image.png",
+      "keywords": "OSINT, intelligence dashboard, geopolitical, real-time monitoring, situation awareness"
+    }
+    </script>
 
     <!-- Favicons -->
     <link rel="icon" type="image/x-icon" href="/favico/favicon.ico" />
